# dummyeditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  icons.qrc  sonar-project.properties
.github/workflows/: cmake.yml
docs/: Installation_Windows-en.md  Installation_Windows-fr.md  classes_diagram.qmodel
forms/: CinematicsWidget.ui  GeneralWindow.ui  characterInstanceWidget.ui  charactersWidget.ui  mapeditdialog.ui  spriteSelectionDialog.ui  spritesWidget.ui
include/: GeneralWindow.hpp  mainWindow.hpp  mapDocument.hpp  mapEditDialog.hpp  mapsTreeModel.hpp  mapsTreeView.hpp
include/drawingTool/: blockingGeneralTool.hpp  graphicGeneralTool.hpp  graphicPaletteTool.hpp
include/editor/: floor.hpp  layerEvents.hpp  map.hpp  project.hpp
include/graphicMap/: graphicItem.hpp  mapGraphicsScene.hpp
include/layer_clipboard/: clipboard.hpp
include/utils/: Logger.hpp  definitions.hpp
include/widgets/: characterInstanceWidget.hpp  charactersWidget.hpp  chipsetGraphicsScene.hpp  cinematicsWidget.hpp  editEventWidget.hpp  generalWindow.hpp  graphicItem.hpp  layerItems.hpp  mapEditDialog.hpp  mapFloorTreeWidget.hpp  mapGraphicsScene.hpp  mapTools.hpp  mapsTree.hpp  spritesWidget.hpp
include/widgetsMap/: chipsetGraphicsScene.hpp  graphicItem.hpp  layerItems.hpp  mapEditDialog.hpp  mapFloorTreeModel.hpp  mapFloorTreeWidget.hpp  mapGraphicsScene.hpp  mapsTree.hpp
src/: GeneralWindow.cpp  GeneralWindow.ui  MapTools.cpp  main.cpp  mainWindow.cpp  mapEditDialog.cpp  mapsTreeView.cpp
src/drawingTool/: blockingEraser.cpp  blockingGeneralTool.cpp  blockingPen.cpp  drawingSelection.cpp  graphicEraser.cpp  graphicPen.cpp  graphicRectangle.cpp
src/editor/: floor.cpp  layerEvents.cpp  map.cpp  project.cpp
src/graphicMap/: layerGraphicBlocking.cpp  layerGraphicEvents.cpp  mapgraphicsscene.cpp
src/utils/: Logger.cpp  logger.cpp
src/widgets/: characterInstanceWidget.cpp  charactersWidget.cpp  chipsetGraphicsScene.cpp  cinematicsWidget.cpp  editEventWidget.cpp  generalWindow.cpp  graphicItem.cpp  layerItems.cpp  mapEditDialog.cpp  mapFloorTreeModel.cpp  mapFloorTreeWidget.cpp  mapGraphicsScene.cpp  mapTools.cpp  mapsTree.cpp  spritesWidget.cpp
src/widgetsMap/: chipsetGraphicsScene.cpp  graphicItem.cpp  layerItems.cpp  mapEditDialog.cpp  mapFloorTreeModel.cpp  mapFloorTreeWidget.cpp  mapGraphicsScene.cpp  mapsTree.cpp
